# gtest-cmake-cpp

./: CMakeLists.txt  README.md
src/: main.cpp  mult.h
src/mymodule/: fib.cpp  fib.h
tests/: CMakeLists.txt  fib.cpp  mult.cpp
